--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
+
   flutter:
     sdk: flutter
 
@@ -27,6 +28,7 @@ dependencies:
   cloud_firestore: ^0.12.9+4
   provider : ^3.1.0
   flutter_spinkit: "^4.0.0"
+  shared_preferences: ^0.5.7+3
 
 dev_dependencies:
   flutter_test:
