--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
+  foldable_sidebar: ^1.0.0
 
   flutter:
     sdk: flutter
@@ -29,6 +30,11 @@ dependencies:
   provider : ^3.1.0
   flutter_spinkit: "^4.0.0"
   shared_preferences: ^0.5.7+3
+  shimmer: ^1.1.1
+  image_picker: ^0.6.7+4
+  firebase_storage: ^3.1.6
+  intl: ^0.16.1
+
 
 dev_dependencies:
   flutter_test:
@@ -40,16 +46,15 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  #assets:
+   # - assets/téléchargement.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -62,17 +67,20 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Lora
+      fonts:
+        - asset: lib/fonts/Lora-Bold.ttf
+        - asset: lib/fonts/Lora-BoldItalic.ttf
+        - asset: lib/fonts/Lora-Italic.ttf
+        - asset: lib/fonts/Lora-Regular.ttf
+    - family: Moon
+      fonts:
+        - asset: lib/fonts/Moon-Bold.ttf
+        - asset: lib/fonts/Moon-Light.ttf
+
+
+
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
