--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   image_picker: ^0.6.7+4
   firebase_storage: ^3.1.6
   intl: ^0.16.1
+  firebase_messaging: ^6.0.16
 
 
 dev_dependencies:
