--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,5 +58,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'com.google.firebase:firebase-messaging:19.1.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
