--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,14 @@ dependencies:
   firebase_storage: ^3.1.6
   intl: ^0.16.1
   firebase_messaging: ^6.0.16
-  cached_network_image: ^2.2.0+1
-  agora_rtc_engine: ^3.0.1-dev.7
   permission_handler: ^3.0.0
   flare_flutter: ^2.0.6
   flare_splash_screen: ^3.0.1
+  photo_view: ^0.9.0
+  meet_network_image: ^0.1.2
+
+
+
 
 
 
@@ -67,7 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/New File 4 (4).flr
+    - assets/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
