--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flare_splash_screen: ^3.0.1
   photo_view: ^0.9.0
   meet_network_image: ^0.1.2
+  flutter_local_notifications: ^1.4.4+4
+
 
 
 
