--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   photo_view: ^0.9.0
   meet_network_image: ^0.1.2
   flutter_local_notifications: ^1.4.4+4
-
+  agora_rtc_engine: ^3.0.1-dev.7
 
 
 
